crates/compiler/semantic/tests/common/snapshots/diagnostics__expressions::type_errors::test_bool_felt_addition_error.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_bool_felt_addition_error"
---
Fixture: semantic_tests::expressions::type_errors::test_bool_felt_addition_error
============================================================
Source code:

        fn main() -> felt {
            let x = 3;
            let ybool = true;
            let resx = ybool + x;  // Expected type mismatch error
            return x;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'bool'
   ╭─[ semantic_tests::expressions::type_errors::test_bool_felt_addition_error:5:24 ]
   │
 5 │             let resx = ybool + x;  // Expected type mismatch error
   │                        ──┬──  
   │                          ╰──── Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'bool'
   │                          │    
   │                          ╰──── Cannot use bool in arithmetic operations. Consider using logical operators (&&, ||) instead.
───╯
